# gitfetch-rs

./: .gitignore  Cargo.toml  NOTICE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cache/: mod.rs  sqlite.rs
src/cli/: args.rs  interactive.rs  mod.rs
src/config/: manager.rs  mod.rs
src/display/: colors.rs  formatter.rs  graph.rs  mod.rs  text_patterns.rs
src/fetcher/: gitea.rs  github.rs  gitlab.rs  mod.rs  sourcehut.rs
src/models/: stats.rs  user.rs
src/utils/: git.rs  mod.rs  timeline.rs
tests/: config_test.rs  graph_test.rs  integration_test.rs  pr_issues_test.rs  unit_tests.rs
