[package]
name = "gitfetch-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5.50", features = ["derive", "cargo"] }
crossterm = "0.29"
console = "0.16"
dialoguer = "0.12"

# HTTP/API
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Cache
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4.42"

# Configuration
toml = "0.9"
directories = "6.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0"

# Git
git2 = "0.20"

# Async traits
async-trait = "0.1.83"
regex = "1.12.2"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.15"
